--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,11 @@
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-flatpickr": "^3.10.13",
+    "react-numeric-input": "^2.2.3",
+    "react-radio-buttons": "^1.2.2",
+    "react-select": "^5.7.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.15",
